[package]
name = "rust_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
diesel = { version = "1.4.4", features = ["mysql"] }
dotenv = "0.15.0"
r2d2 = "*"
r2d2-diesel = "*"